Fix hidden navigation on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -104,41 +104,10 @@
     }
 
     @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: $spacing-unit / 2;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
+        line-height: 56px;
 
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
+        .rw-icon {
             display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
         }
 
         .page-link {
@@ -330,6 +299,10 @@
     padding: 5px;
     font-size: 12px;
     float: left;
+
+    @include media-query($on-palm) {
+        width: 95%;
+    }
 
     .description {
         height: 40px;
